[gd_scene load_steps=4 format=3 uid="uid://cjydg3w4s2qx1"]

[ext_resource type="Script" uid="uid://cw1yxef3md45g" path="res://scenes/gui/scr_bounty_board.gd" id="1_yln5i"]
[ext_resource type="Script" uid="uid://5ft3meh2ry86" path="res://code/scr_autoscroll_component.gd" id="2_xqogb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xqogb"]

[node name="BountyBoard" type="Node2D"]
script = ExtResource("1_yln5i")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 120.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.396078)

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0166667
anchor_right = 0.975
anchor_bottom = 0.966667
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "quest board"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "bounties"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BountyList" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "bounty info"
horizontal_alignment = 1

[node name="BountyList" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionText" type="RichTextLabel" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "select a quest..."

[node name="AutoscrollComponent" type="Node" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList/DescriptionText" node_paths=PackedStringArray("target")]
script = ExtResource("2_xqogb")
target = NodePath("..")
metadata/_custom_type_script = "uid://5ft3meh2ry86"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList/VBoxContainer"]
layout_mode = 2
text = "progress"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0

[node name="ClaimButton" type="Button" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "claim reward"

[node name="HSeparator" type="HSeparator" parent="Control/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BountyList/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_xqogb")
